--- a/create-website-using-html-&-css/style.css
+++ b/create-website-using-html-&-css/style.css
@@ -708,3 +708,50 @@ nav .items button {
   cursor: pointer;
   border-radius: 4px;
 }
+
+/* news-letter */
+.news-letter {
+  height: max-content;
+  max-width: 85%;
+  margin: 60px auto;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  background-color: color-mix(in srgb, #4154f1, transparent 85%);
+  padding-bottom: 20px;
+}
+
+.news-letter p {
+  font-size: 13px;
+  font-weight: 700;
+  padding: 8px 20px;
+  background: #eef1ff;
+  color: #4154f1;
+  display: inline-block;
+  border-radius: 50px;
+}
+
+.news-letter h5 {
+  font-size: 16px;
+  font-weight: 500;
+  margin: 20px 0 50px;
+  color: #555;
+}
+
+.news-letter .inputs input {
+  padding: 5px;
+  width: 25rem;
+  box-shadow: 0px 0px 3px 0px black;
+  border: none;
+}
+
+.news-letter .inputs button {
+  padding: 5.4px;
+  background-color: #4a5cf5;
+  color: #fff;
+  border: none;
+  border-radius: 2px;
+  width: 5rem;
+  cursor: pointer;
+}
